fix star alignment on blog #2

--- a/includes/assets/css/blog.less
+++ b/includes/assets/css/blog.less
@@ -6,7 +6,7 @@
 		url( 'includes/assets/images/shapes/moon-light.svg' );
 		background-repeat: repeat, no-repeat;
 		background-size: 1440px auto, 800px auto;
-		background-position: left top, -300px -190px;
+		background-position: center top, -300px -190px;
 		color: #fff;
 
 		& .hero {
